# counter_strike_game

counter_strike/: CMakeLists.txt  cmake_install.cmake
counter_strike/includes/: Battlefield.h  Defines.h  DesertEagle.h  Glock.h  Pistol.h  Player.h
counter_strike/src/: Battlefield.cpp  DesertEagle.cpp  Glock.cpp  Pistol.cpp  Player.cpp  main.cpp
counter_strike/tests/real/: test.001.in.txt  test.001.out.txt  test.002.in.txt  test.002.out.txt  test.003.in.txt  test.003.out.txt  test.004.in.txt  test.004.out.txt  test.005.in.txt  test.005.out.txt  test.006.in.txt  test.006.out.txt  test.007.in.txt  test.007.out.txt  test.008.in.txt  test.008.out.txt  test.009.in.txt  test.009.out.txt  test.010.in.txt  test.010.out.txt
counter_strike/tests/sample/: test.000.001.in.txt  test.000.001.out.txt  test.000.002.in.txt  test.000.002.out.txt  test.000.003.in.txt  test.000.003.out.txt
